[package]
name = "sqlite_db"
version = "0.1.0"
edition = "2024"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- DB
rusqlite = { version = "0.37", features = ["bundled", "serde_json"] }

[dev-dependencies]
pretty-sqlite = { version = "0.3.0"}
